# EducAlin

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
database/: README_SEED.md  educalin.db  seed_demo.py  yoyo.ini
database/migrations/: 001_create_usuarios_table.py  002_create_turmas_tables.py  003_create_materiais_table.py  004_create_avaliacoes_table.py  005_create_notas_table.py  006_create_metas_table.py  007_create_planos_acao_tables.py  008_add_topico_avaliacoes.py  008_add_topico_to_materiais.py
docs/: Requisitos_EducAlin.md  poo_especificacao_projeto.md  usuario_repository.md
examples/: material_repository_example.py  usuario_repository_example.py
static/css/: style.css
static/js/: app.js
templates/: base.html  dashboard.html  login.html  register.html
templates/dashboard/: aluno.html  coordenador.html  professor.html  relatorios.html
templates/turmas/: criar.html
tests/: conftest.py
tests/api/: __init__.py  conftest.py  test_auth_routes.py  test_materiais_routes.py  test_notas_routes.py  test_planos_routes.py  test_schemas.py  test_turmas_routes.py
tests/domain/: test_aluno.py  test_avaliacao.py  test_coordenador.py  test_material.py  test_meta.py  test_meta_gamificacao.py  test_nota.py  test_notificacoes_integradas.py  test_plano_acao.py  test_professor.py  test_turma.py  test_usuario.py
tests/factories/: test_material_factory.py
tests/integration/: test_database_schema.py
tests/repositories/: __init__.py  test_avaliacao_repository.py  test_material_repository.py  test_plano_acao_repository.py  (+2 more)
(+81 files in other folders)
