[project]
name = "educalin"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Silveira",email = "samuelsilveira100@gmail.com"},
    {name = "Rayan Oliveira",email = "elderrayanago2004@gmail.com"},
    {name = "Pedro Yan Alcantara",email = "pedroyanpalacio@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "educalin", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
