[project]
name = "educalin"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Silveira",email = "samuelsilveira100@gmail.com"},
    {name = "Rayan Oliveira",email = "elderrayanago2004@gmail.com"},
    {name = "Pedro Yan Alcantara",email = "pedroya0203@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.1.3,<5.0.0",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "fpdf2 (>=2.8.6,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "educalin", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
